# NEAT-JAX

./: .gitignore  README.md  analysis.ipynb  example_slime.py  main.py  pyproject.toml
examples/: acrobot.py  cartpole.py  classification.py  slimevolley.py  slimevolley_analysis.ipynb  xor.py
src/: backprop.py  draw.py  evaluator.py  genome.py  helper.py  innovation.py  population.py  structure.py  topology.py  trainer.py
