[project]
name = "neat-jax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "evojax>=0.2.17",
    "ipykernel>=6.30.1",
    "jax[cpu]>=0.7.1", # Always install CPU version
    "jax[tpu]>=0.7.1; sys_platform != 'darwin'", # Add TPU on non-macOS
    "opencv-python>=4.12.0.88",
    "slimevolleygym>=0.1.0",
    "tqdm>=4.67.1",
]
